wms-deployment/kubernetes/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: wms-gateway
  namespace: wms
spec:
  gatewayClassName: nginx
  listeners:
    - name: http-frontend
      port: 80
      protocol: HTTP
      hostname: "app.datanetwork.online"
    - name: http-backend
      port: 80
      protocol: HTTP
      hostname: "api.datanetwork.online"
    - name: https-frontend
      port: 443
      protocol: HTTPS
      hostname: "app.datanetwork.online"
      tls:
        mode: Terminate
        certificateRefs:
          - name: frontend-tls
    - name: https-backend
      port: 443
      protocol: HTTPS
      hostname: "api.datanetwork.online"
      tls:
        mode: Terminate
        certificateRefs:
          - name: backend-tls
