wms-deployment/kubernetes/gateway/httproute-backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-route
  namespace: wms
spec:
  parentRefs:
    - name: wms-gateway
  hostnames:
    - "api.datanetwork.online"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backend-service
          port: 80
