wms-deployment/kubernetes/gateway/httproute-frontend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: wms
spec:
  parentRefs:
    - name: wms-gateway
  hostnames:
    - "app.datanetwork.online"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend-service
          port: 80
